--- a/index.html
+++ b/index.html
@@ -4,5 +4,16 @@
     </head>
     <body>
         <h1>Hello</h1>
+            <p>Welcome to my website! Here I will document my comings and goings as I learn the basics of web development, alongside my job in SEO and my evenings running, cycling, reading and creating. </p>
+        <h2>About me</h2>
+            <p>A status report in five bullet points:</p>
+                <ul>
+                <li>One bachelor degree in German (Medieval and Modern Languages)</li>
+                <li>Working in SEO</li>
+                <li>Making myself a website</li>
+                <li>Living in London</li>
+                <li>Enjoying the aforementioned hobbies</li>
+            </ul>
+
     </body>
 </html>
